# samc21_bootloader

./: .gitignore  CMakeLists.txt  README.md  checksum.sh  crc32.sh  image.c  image.sh  patch_elf.sh  samc21.cmake  samc21_cmsis.cmake  toolchain-cortex-m0+.cmake
gcc/: app.ld  bootloader.ld  memory_map.ld
samc21/: samc21.cmake  toolchain-cortex-m0+.cmake
samc21_cmsis/: CMakeLists.txt  README.md  samc21_cmsis.cmake  toolchain-cortex-m0+.cmake
samc21_cmsis/samc21/gcc/gcc/: startup_samc21.c
src/: crc.c  crc.h  gnu_build_id.h  image.h  main.cpp  memory_map.h
src/crc/: crc.c  crc.h  crc_table.cmake  crc_table_generator.c
util/: crc_table.cmake  generator.c
